# cian_scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/actions/common-steps/: action.yml
.github/workflows/: action.yml
configs/: config.py
db/: database.py  models.py
db/crud/: manager_users.py
src/bot/: bot.py
src/bot/handlers/: __init__.py  callbacks.py  commands.py  processers.py
src/bot/keyboards/: settings_keyboards.py
src/utils/: __init__.py  decorators.py  loggers.py  serializer.py
src/web_scraper/: __init__.py  parser.py  requester.py  saver.py  scraper.py
tests/intregration/: test_scraper_integration.py
tests/unit/: test_database.py  test_parser.py  test_requester.py  test_scraper.py
