[project]
name = "lab_1"
version = "0.1.0"
description = "ITMO_LAB_1"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.11.13",
    "argparse>=1.4.0",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "lxml>=5.3.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "requests[socks]>=2.32.3",
    "sqlalchemy>=2.0.39",
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "aiosqlite>=0.21.0",
    "pytest-randomly>=3.16.0",
    "pytest-cov>=4.1.0",
    "pytest>=8.3.3",
    "pytest-forked>=1.6.0",
    "ruff>=0.7.4",
    "mypy",
    "pytest-asyncio>=0.25.3",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-namings
    "C",   # flake8-comprehensions
    "G",   # flake8-logging-format
    "DTZ", # flake8-datetimetz
    "T20", # flake8-print
    "PL",  # pylint,
    "SIM", # simplifier
    "B",   # `flake8-bugbear`
]
ignore = [
    "C901",    # too complex
    "C401",    # unnecessary generator (rewrite as a `set` comprehension)
    "C402",    # unnecessary generator (rewrite as a `dict` comprehension)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches 
    "PLR0913", # too many arguments in function definition
    "PLR2004", # magic value used in comparison
    "T201",    # print
    "PLR0915"  # Too many statement
]

[tool.ruff]
line-length = 130
include = ["src/**/*.py", "tests/**/*.py"]
exclude = ["migrations", "docs", "venv", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true
ignore_missing_imports = true 
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
files = "src/**/*.py"
